Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-6388

llog_reader cannot parse changelog records

XMLWordPrintable

    • 3
    • 9223372036854775807

      llog_reader does not handle records of type CHANGELOG_REC or CHANGELOG_USER_REC. In addition, its output for records in the changelog_catalog (type LLOG_LOGID_MAGIC) is more obscure than it needs to be.

      The change submitted adds support for those unhandled record types. It also provides the actual pathname to the lustre log containing changelog records, that one would need when mounting an ldiskfs or zfs target via the posix layer for inspection.

            emoly.liu Emoly Liu
            ofaaland Olaf Faaland
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: