lustre/utils/llog_reader.c
@@ -33,8 +33,12 @@
  * This file is part of Lustre, http://www.lustre.org/
  * Lustre is a trademark of Sun Microsystems, Inc.
  */
- /* Interpret configuration llogs */
-
+/** \defgroup llog_reader Lustre Log Reader
+ *
+ * Interpret llogs used for storing configuration and changelog data
+ *
+ * @{
+ */
 
 #include <stdio.h>
 #include <sys/types.h>
@@ -44,11 +48,14 @@
 #endif
 #include <unistd.h>
 #include <fcntl.h>
+#include <sys/vfs.h>
+#include <linux/magic.h>
 
 #include <time.h>
 #include <lnet/nidstr.h>
 #include <lustre/lustre_idl.h>
 #include <lustre/lustreapi.h>
+#include <lustre_log_user.h>
 #include <lustre_cfg.h>
 
 static inline int ext2_test_bit(int nr, const void *addr)
@@ -67,7 +74,8 @@ int llog_pack_buffer(int fd, struct llog_log_hdr **llog_buf,
                      struct llog_rec_hdr ***recs, int *recs_number);
 
 void print_llog_header(struct llog_log_hdr *llog_buf);
-void print_records(struct llog_rec_hdr **recs_buf,int rec_number);
+static void print_records(struct llog_rec_hdr **recs_buf,
+			  int rec_number, int is_ext);
 void llog_unpack_buffer(int fd, struct llog_log_hdr *llog_buf,
                         struct llog_rec_hdr **recs_buf);
 
@@ -95,99 +103,162 @@ char* portals_command[17]=
         ""
 };
 
+int is_fstype_ext(int fd)
+{
+	struct statfs		st;
+	int			rc;
+
+	rc = fstatfs(fd, &st);
+	if (rc < 0) {
+		llapi_error(LLAPI_MSG_ERROR, rc, "Got statfs error.");
+		return -errno;
+	}
+
+	return (st.f_type == EXT4_SUPER_MAGIC);
+}
+
+
+/**
+ * Attempt to display a path to the object (file) containing changelog entries,
+ * referred to by this changelog_catalog record.
+ *
+ * This path depends on the implementation of the OSD device; zfs-osd and
+ * ldiskfs-osd are different.
+ *
+ * Assumes that if the file system containing the changelog_catalog is
+ * ext{2,3,4}, the backend is ldiskfs-osd; otherwise it is either zfs-osd or at
+ * least names objects based on FID and the zfs-osd path (which includes the
+ * FID) will be sufficient.
+ *
+ * The Object ID stored in the record is also displayed untranslated.
+ */
+#define OSD_OI_FID_NR         (1UL << 7)
+static void print_log_path(struct llog_logid_rec *lid, int is_ext)
+{
+
+	char			object_path[255];
+	struct lu_fid		fid_from_logid;
+
+	logid_to_fid(&lid->lid_id, &fid_from_logid);
+
+	if (is_ext)
+		snprintf(object_path, sizeof(object_path),
+			 "O/"LPU64"/d%u/%u", fid_from_logid.f_seq,
+			 fid_from_logid.f_oid % 32, fid_from_logid.f_oid);
+	else
+		snprintf(object_path, sizeof(object_path),
+			 "oi."LPU64"/"DFID_NOBRACE,
+			 fid_from_logid.f_seq & (OSD_OI_FID_NR - 1) ,
+			 PFID(&fid_from_logid));
+
+	printf("ogen=%X id="DOSTID" path=%s\n",
+		lid->lid_id.lgl_ogen, POSTID(&lid->lid_id.lgl_oi),
+		object_path);
+}
+
 int main(int argc, char **argv)
 {
-        int rc = 0;
-        int fd, rec_number;
-        struct llog_log_hdr *llog_buf = NULL;
-        struct llog_rec_hdr **recs_buf = NULL;
+	int rc = 0;
+	int is_ext;
+	int fd, rec_number;
+	struct llog_log_hdr *llog_buf = NULL;
+	struct llog_rec_hdr **recs_buf = NULL;
 
-        setlinebuf(stdout);
+	setlinebuf(stdout);
 
-        if(argc != 2 ){
-                printf("Usage: llog_reader filename\n");
-                return -1;
-        }
+	if (argc != 2) {
+		printf("Usage: llog_reader filename\n");
+		return -1;
+	}
 
-        fd = open(argv[1],O_RDONLY);
-        if (fd < 0){
+	fd = open(argv[1], O_RDONLY);
+	if (fd < 0) {
 		rc = -errno;
 		llapi_error(LLAPI_MSG_ERROR, rc, "Could not open the file %s.",
 			    argv[1]);
-                goto out;
-        }
-        rc = llog_pack_buffer(fd, &llog_buf, &recs_buf, &rec_number);
-        if (rc < 0) {
-		llapi_error(LLAPI_MSG_ERROR, rc, "Could not pack buffer.");
-                goto out_fd;
-        }
+		goto out;
+	}
 
-        print_llog_header(llog_buf);
-        print_records(recs_buf,rec_number);
-        llog_unpack_buffer(fd,llog_buf,recs_buf);
+	is_ext = is_fstype_ext(fd);
+	if (is_ext < 0) {
+		printf("Unable to determine type of filesystem containing %s\n",
+		       argv[1]);
+		goto out;
+	}
+
+	rc = llog_pack_buffer(fd, &llog_buf, &recs_buf, &rec_number);
+	if (rc < 0) {
+		llapi_error(LLAPI_MSG_ERROR, rc, "Could not pack buffer.");
+		goto out_fd;
+	}
+
+	print_llog_header(llog_buf);
+	print_records(recs_buf, rec_number, is_ext);
+	llog_unpack_buffer(fd, llog_buf, recs_buf);
+
 out_fd:
-        close(fd);
+	close(fd);
 out:
-        return rc;
+	return rc;
 }
 
 
 
 int llog_pack_buffer(int fd, struct llog_log_hdr **llog,
-                     struct llog_rec_hdr ***recs,
-                     int *recs_number)
+		     struct llog_rec_hdr ***recs,
+		     int *recs_number)
 {
-        int rc = 0, recs_num,rd;
-        off_t file_size;
-        struct stat st;
-        char *file_buf=NULL, *recs_buf=NULL;
-        struct llog_rec_hdr **recs_pr=NULL;
-        char *ptr=NULL;
-        int i;
+	int rc = 0, recs_num, rd;
+	off_t file_size;
+	struct stat st;
+	char *file_buf = NULL, *recs_buf = NULL;
+	struct llog_rec_hdr **recs_pr = NULL;
+	char *ptr = NULL;
+	int i;
 
-        rc = fstat(fd,&st);
-        if (rc < 0){
+	rc = fstat(fd, &st);
+	if (rc < 0) {
 		rc = -errno;
 		llapi_error(LLAPI_MSG_ERROR, rc, "Got file stat error.");
-                goto out;
-        }
-        file_size = st.st_size;
+		goto out;
+	}
+	file_size = st.st_size;
 	if (file_size == 0) {
 		rc = -1;
 		llapi_error(LLAPI_MSG_ERROR, rc, "File is empty.");
 		goto out;
 	}
 
-        file_buf = malloc(file_size);
-        if (file_buf == NULL){
-                rc = -ENOMEM;
+	file_buf = malloc(file_size);
+	if (file_buf == NULL) {
+		rc = -ENOMEM;
 		llapi_error(LLAPI_MSG_ERROR, rc, "Memory Alloc for file_buf.");
-                goto out;
-        }
-        *llog = (struct llog_log_hdr*)file_buf;
+		goto out;
+	}
+	*llog = (struct llog_log_hdr *)file_buf;
 
-        rd = read(fd,file_buf,file_size);
-        if (rd < file_size){
-                rc = -EIO; /*FIXME*/
+	rd = read(fd, file_buf, file_size);
+	if (rd < file_size) {
+		rc = -EIO; /*FIXME*/
 		llapi_error(LLAPI_MSG_ERROR, rc, "Read file error.");
-                goto clear_file_buf;
-        }
+		goto clear_file_buf;
+	}
 
-        /* the llog header not countable here.*/
-        recs_num = le32_to_cpu((*llog)->llh_count)-1;
+	/* the llog header not countable here.*/
+	recs_num = le32_to_cpu((*llog)->llh_count) - 1;
 
-        recs_buf = malloc(recs_num * sizeof(struct llog_rec_hdr *));
-        if (recs_buf == NULL){
-                rc = -ENOMEM;
+	recs_buf = malloc(recs_num * sizeof(struct llog_rec_hdr *));
+	if (recs_buf == NULL) {
+		rc = -ENOMEM;
 		llapi_error(LLAPI_MSG_ERROR, rc, "Memory Alloc for recs_buf.");
-                goto clear_file_buf;
-        }
-        recs_pr = (struct llog_rec_hdr **)recs_buf;
+		goto clear_file_buf;
+	}
+	recs_pr = (struct llog_rec_hdr **)recs_buf;
 
-        ptr = file_buf + le32_to_cpu((*llog)->llh_hdr.lrh_len);
-        i = 0;
+	ptr = file_buf + le32_to_cpu((*llog)->llh_hdr.lrh_len);
+	i = 0;
 
-        while (i < recs_num){
+	while (i < recs_num) {
 		struct llog_rec_hdr *cur_rec;
 		int idx;
 
@@ -204,9 +275,8 @@ int llog_pack_buffer(int fd, struct llog_log_hdr **llog,
 		recs_pr[i] = cur_rec;
 
 		if (ext2_test_bit(idx, LLOG_HDR_BITMAP(*llog))) {
-			if (le32_to_cpu(cur_rec->lrh_type) != OBD_CFG_REC)
-				printf("rec #%d type=%x len=%u\n", idx,
-				       cur_rec->lrh_type, cur_rec->lrh_len);
+			printf("rec #%d type=%x len=%u\n", idx,
+			       cur_rec->lrh_type, cur_rec->lrh_len);
 		} else {
 			printf("Bit %d of %d not set\n", idx, recs_num);
 			cur_rec->lrh_id = CANCELLED;
@@ -214,29 +284,29 @@ int llog_pack_buffer(int fd, struct llog_log_hdr **llog,
 			i--;
 		}
 
-                ptr += le32_to_cpu(cur_rec->lrh_len);
-                if ((ptr - file_buf) > file_size) {
-                        printf("The log is corrupt (too big at %d)\n", i);
-                        rc = -EINVAL;
-                        goto clear_recs_buf;
-                }
-                i++;
-        }
+		ptr += le32_to_cpu(cur_rec->lrh_len);
+		if ((ptr - file_buf) > file_size) {
+			printf("The log is corrupt (too big at %d)\n", i);
+			rc = -EINVAL;
+			goto clear_recs_buf;
+		}
+		i++;
+	}
 
-        *recs = recs_pr;
-        *recs_number = recs_num;
+	*recs = recs_pr;
+	*recs_number = recs_num;
 
 out:
-        return rc;
+	return rc;
 
 clear_recs_buf:
-        free(recs_buf);
+	free(recs_buf);
 
 clear_file_buf:
-        free(file_buf);
+	free(file_buf);
 
-        *llog=NULL;
-        goto out;
+	*llog = NULL;
+	goto out;
 }
 
 void llog_unpack_buffer(int fd, struct llog_log_hdr *llog_buf,
@@ -304,7 +374,7 @@ static void print_setup_cfg(struct lustre_cfg *lcfg)
                 printf("setup     ");
                 print_1_cfg(lcfg);
         }
-        
+
         return;
 }
 
@@ -497,13 +567,6 @@ void print_lustre_cfg(struct lustre_cfg *lcfg, int *skip)
         return;
 }
 
-static void print_logid(struct llog_logid_rec *lid)
-{
-	printf("ogen=%X name="DOSTID"\n",
-		lid->lid_id.lgl_ogen,
-		POSTID(&lid->lid_id.lgl_oi));
-}
-
 static void print_hsm_action(struct llog_agent_req_rec *larr)
 {
 	char	buf[12];
@@ -531,7 +594,17 @@ static void print_hsm_action(struct llog_agent_req_rec *larr)
 	       hai_dump_data_field(&larr->arr_hai, buf, sizeof(buf)));
 }
 
-void print_records(struct llog_rec_hdr **recs, int rec_number)
+void print_changelog_rec(struct llog_changelog_rec *rec)
+{
+	printf("changelog record id:0x%x cr_flags:0x%x cr_type:%s(0x%x)\n",
+	       le32_to_cpu(rec->cr_hdr.lrh_id),
+	       le32_to_cpu(rec->cr.cr_flags),
+	       changelog_type2str(le32_to_cpu(rec->cr.cr_type)),
+	       le32_to_cpu(rec->cr.cr_type));
+}
+
+static void print_records(struct llog_rec_hdr **recs,
+			  int rec_number, int is_ext)
 {
 	__u32 lopt;
 	int i, skip = 0;
@@ -555,10 +628,19 @@ void print_records(struct llog_rec_hdr **recs, int rec_number)
 			printf("padding\n");
 			break;
 		case LLOG_LOGID_MAGIC:
-			print_logid((struct llog_logid_rec *)recs[i]);
+			print_log_path((struct llog_logid_rec *)recs[i],
+				       is_ext);
 			break;
 		case HSM_AGENT_REC:
 			print_hsm_action((struct llog_agent_req_rec *)recs[i]);
+			break;
+		case CHANGELOG_REC:
+			print_changelog_rec((struct llog_changelog_rec *)
+					    recs[i]);
+			break;
+		case CHANGELOG_USER_REC:
+			printf("changelog_user record id:0x%x\n",
+			       le32_to_cpu(recs[i]->lrh_id));
 			break;
 		default:
 			printf("unknown type %x\n", lopt);
@@ -566,3 +648,5 @@ void print_records(struct llog_rec_hdr **recs, int rec_number)
 		}
 	}
 }
+
+/** @} llog_reader */
